[bug] wrong height calculation for work area canvas

--- a/src/styles/web/styles.scss
+++ b/src/styles/web/styles.scss
@@ -11,6 +11,8 @@ html, body {
 
 	height: 100%;
 	width: 100%;
+
+	overflow: hidden;
 }
 
 * {
